CRUD Operations Done

--- a/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Campus" asp-action="CreateCampus">Create Campus</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Campus" asp-action="AllCampuses">All Campuses</a>
+                        </li>
                     </ul>
                 </div>
             </div>
