--- a/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SIS_UMS.styles.css" asp-append-version="true" />
+
+    <link rel="icon" href="~/img/favicon.ico" type="image/x-icon" />
+
 </head>
 <body>
     <header>
