--- a/SIS_UMS/SIS_UMS/Views/Students/GetAllStudentCourses.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Students/GetAllStudentCourses.cshtml
@@ -12,6 +12,7 @@
         </tr>
     </thead>
     <tbody>
+        <!-- Loop through the model data to populate the table -->
         @foreach (var studentCourse in Model)
         {
             <tr>
