--- a/SIS_UMS/SIS_UMS/Views/ApplicationForm/GetAllApplicationForm.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/ApplicationForm/GetAllApplicationForm.cshtml
@@ -4,41 +4,48 @@
     ViewBag.Title = "USAL | Application Forms";
 }
 
-
 <section class="content">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
-                    <div class="card-header">
-                        <h3 class="card-title">DataTable with default features</h3>
-                    </div>
-                    <!-- /.card-header -->
-                    <div class="card-body">
-                        <div id="example1_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                            <div class="row">
-                                <div class="col-sm-12 col-md-6">
-                                    <div class="dt-buttons btn-group flex-wrap">
-                                        <button class="btn btn-secondary buttons-copy buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>Copy</span></button> 
-                                            <button class="btn btn-secondary buttons-csv buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>CSV</span></button>
-                                            <button class="btn btn-secondary buttons-excel buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>Excel</span></button> 
-                                            <button class="btn btn-secondary buttons-pdf buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>PDF</span></button> 
-                                            <button class="btn btn-secondary buttons-print" tabindex="0" aria-controls="example1" type="button"><span>Print</span></button> 
-                                            <div class="btn-group">
-                                                <button class="btn btn-secondary buttons-collection dropdown-toggle buttons-colvis" tabindex="0" aria-controls="example1" type="button" aria-haspopup="true"><span>Column visibility</span><span class="dt-down-arrow"></span></button>
-                                            </div>
+                <div class="card-header">
+                    <h3 class="card-title">DataTable with default features</h3> <!-- Card title -->
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body">
+                    <div id="example1_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                        <div class="row">
+                            <div class="form-group">
+                                <a asp-controller="ApplicationForm" asp-action="CreateApplicationForm" class="btn btn-primary">Create New</a>
+                            </div>
+                            <!-- DataTables Buttons -->
+                            <div class="col-sm-12 col-md-6">
+                                <div class="dt-buttons btn-group flex-wrap">
+                                    <!-- Buttons for copying, exporting data, etc. -->
+                                    <button class="btn btn-secondary buttons-copy buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>Copy</span></button>
+                                    <button class="btn btn-secondary buttons-csv buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>CSV</span></button>
+                                    <button class="btn btn-secondary buttons-excel buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>Excel</span></button>
+                                    <button class="btn btn-secondary buttons-pdf buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>PDF</span></button>
+                                    <button class="btn btn-secondary buttons-print" tabindex="0" aria-controls="example1" type="button"><span>Print</span></button>
+                                    <div class="btn-group">
+                                        <button class="btn btn-secondary buttons-collection dropdown-toggle buttons-colvis" tabindex="0" aria-controls="example1" type="button" aria-haspopup="true"><span>Column visibility</span><span class="dt-down-arrow"></span></button>
                                     </div>
                                 </div>
-                                <div class="col-sm-12 col-md-6">
-                                      <div id="example1_filter" class="dataTables_filter">
-                                            <label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="example1"></label>
-                                      </div>
-                                 </div>
-                             </div>
-                             <div class="row">
-                                <div class="col-sm-12">
-                                    <table id="example1" class="table table-bordered table-striped dataTable dtr-inline" aria-describedby="example1_info">
-                                        <thead>
-                                            <tr>
+                            </div>
+                            <!-- DataTables Search Box -->
+                            <div class="col-sm-12 col-md-6">
+                                <div id="example1_filter" class="dataTables_filter">
+                                    <label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="example1"></label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <!-- DataTable -->
+                                <table id="example1" class="table table-bordered table-striped dataTable dtr-inline" aria-describedby="example1_info">
+                                    <thead>
+                                        <tr>
+                                            <!-- Define table headers -->
                                             <th class="sorting sorting_asc" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Form ID: activate to sort column descending">Form ID</th>
                                             <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="Office Name: activate to sort column ascending">Office Name</th>
                                             <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="Student ID: activate to sort column ascending">Student ID</th>
@@ -48,8 +55,9 @@
                                             <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="Processing Date: activate to sort column ascending">Processing Date</th>
                                             <th class="sorting" tabindex="0" aria-controls="example1" rowspan="1" colspan="1" aria-label="Additional Application Details: activate to sort column ascending">Additional Application Details</th>
                                         </tr>
-                                        </thead>
-                                        <tbody>
+                                    </thead>
+                                    <tbody>
+                                        <!-- Loop through the model data to populate the table -->
                                         @foreach (var applicationForms in Model)
                                         {
                                             <tr class="odd">
@@ -61,13 +69,13 @@
                                                 <td class="dtr-control sorting_1" tabindex="0">@applicationForms.Status</td>
                                                 <td class="dtr-control sorting_1" tabindex="0">@applicationForms.ProcessingDate</td>
                                                 <td class="dtr-control sorting_1" tabindex="0">@applicationForms.AdditionalApplicationDetails</td>
-                                                
                                             </tr>
                                         }
-                                        </tbody>
-                                        <tfoot>
-                                            <tr>
-                                                <th rowspan="1" colspan="1">Form ID</th>
+                                    </tbody>
+                                    <tfoot>
+                                        <tr>
+                                            <!-- Define footer columns -->
+                                            <th rowspan="1" colspan="1">Form ID</th>
                                             <th rowspan="1" colspan="1">Office Name</th>
                                             <th rowspan="1" colspan="1">Student ID</th>
                                             <th rowspan="1" colspan="1">Application Date</th>
@@ -75,60 +83,61 @@
                                             <th rowspan="1" colspan="1">Status</th>
                                             <th rowspan="1" colspan="1">Processing Date</th>
                                             <th rowspan="1" colspan="1">Additional Application Details</th>
-
-                                        </tfoot>
-                                    </table>
-                                </div>
+                                        </tr>
+                                    </tfoot>
+                                </table>
                             </div>
-                            <div class="row">
-                                <div class="col-sm-12 col-md-5">
-                                    <div class="dataTables_info" id="example1_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
-                                    </div>
-                                    <div class="col-sm-12 col-md-7">
-                                        <div class="dataTables_paginate paging_simple_numbers" id="example1_paginate">
-                                            <ul class="pagination">
-                                                <li class="paginate_button page-item previous disabled" id="example1_previous">
-                                                    <a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0" class="page-link">Previous</a>  
-                                                </li>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-5">
+                                <div class="dataTables_info" id="example1_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
+                            </div>
+                            <div class="col-sm-12 col-md-7">
+                                <!-- Pagination -->
+                                <div class="dataTables_paginate paging_simple_numbers" id="example1_paginate">
+                                    <ul class="pagination">
+                                        <li class="paginate_button page-item previous disabled" id="example1_previous">
+                                            <a href="#" aria-controls="example1" data-dt-idx="0" tabindex="0" class="page-link">Previous</a>
+                                        </li>
 
-                                                <li class="paginate_button page-item active">
-                                                    <a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0" class="page-link">1</a>
-                                                </li>
+                                        <li class="paginate_button page-item active">
+                                             <a href="#" aria-controls="example1" data-dt-idx="1" tabindex="0" class="page-link">1</a>
+                                        </li>
 
-                                                 <li class="paginate_button page-item ">
-                                                        <a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0" class="page-link">2</a>
-                                                  </li>
+                                        <li class="paginate_button page-item ">
+                                             <a href="#" aria-controls="example1" data-dt-idx="2" tabindex="0" class="page-link">2</a>
+                                        </li>
 
-                                                 <li class="paginate_button page-item ">
-                                                        <a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0" class="page-link">3</a>
-                                                 </li>
+                                        <li class="paginate_button page-item ">
+                                             <a href="#" aria-controls="example1" data-dt-idx="3" tabindex="0" class="page-link">3</a>
+                                        </li>
 
-                                                 <li class="paginate_button page-item ">
-                                                        <a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0" class="page-link">4</a>
-                                                 </li>
+                                        <li class="paginate_button page-item ">
+                                             <a href="#" aria-controls="example1" data-dt-idx="4" tabindex="0" class="page-link">4</a>
+                                        </li>
 
-                                                 <li class="paginate_button page-item ">
-                                                        <a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0" class="page-link">5</a>
-                                                 </li>
+                                        <li class="paginate_button page-item ">
+                                             <a href="#" aria-controls="example1" data-dt-idx="5" tabindex="0" class="page-link">5</a>
+                                        </li>
 
-                                                 <li class="paginate_button page-item ">
-                                                        <a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0" class="page-link">6</a>
-                                                 </li>
+                                        <li class="paginate_button page-item ">
+                                             <a href="#" aria-controls="example1" data-dt-idx="6" tabindex="0" class="page-link">6</a>
+                                        </li>
 
-                                                 <li class="paginate_button page-item next" id="example1_next">
-                                                       <a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0" class="page-link">Next</a>
-                                                 </li>
-                                             </ul>
-                                    </div>
+                                        <li class="paginate_button page-item next" id="example1_next">
+                                             <a href="#" aria-controls="example1" data-dt-idx="7" tabindex="0" class="page-link">Next</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- /.card-body -->
                 </div>
 
-</div>
-</div>
-</div>
+            </div>
+        </div>
+    </div>
 </section>
 
 
@@ -137,11 +146,13 @@
 
     <script>
         $(function () {
+            // Initialize DataTables for the table with id "example1"
             $("#example1").DataTable({
                 "responsive": true, "lengthChange": false, "autoWidth": false,
                 "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
             }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
 
+            // Initialize DataTables for the table with id "example2"
             $('#example2').DataTable({
                 "paging": true,
                 "lengthChange": false,
