--- a/SIS_UMS/SIS_UMS/wwwroot/css/site.css
+++ b/SIS_UMS/SIS_UMS/wwwroot/css/site.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -15,4 +18,7 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+* {
+    font-family: 'Roboto', sans-serif;
 }
