Finishing the Implementation of ApplicationForm

--- a/SIS_UMS/SIS_UMS/Views/Accounting/AccountingLandingPage.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Accounting/AccountingLandingPage.cshtml
@@ -72,7 +72,7 @@
         </a>
     </div>
 
-    <div class="info-box-container">
+    <div class="info-box-container last-child">
         <!-- Application Form Container that must redirect to the student application form to fill with the office -->
         <a asp-controller="ApplicationForm" asp-action="GetAllApplicationForm" class="centered-link">
             <div class="info-box">
