--- a/SIS_UMS/SIS_UMS/Views/ApplicationForm/CreateApplicationForm.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/ApplicationForm/CreateApplicationForm.cshtml
@@ -26,7 +26,7 @@
 
 
 
-<section class="content">
+<section class="content media-screen">
     <div class="d-flex justify-content-center align-items-center" style="min-height: 90vh;">
         <div class="col-md-12">
             <div class="card card-primary">
