--- a/SIS_UMS/SIS_UMS/wwwroot/css/site.css
+++ b/SIS_UMS/SIS_UMS/wwwroot/css/site.css
@@ -23,3 +23,10 @@ select[disabled]:hover,
 textarea[disabled]:hover {
     cursor: not-allowed;
 }
+
+@media screen and (min-width: 14in) {
+    
+    .media-screen {
+        margin-left: 100px;
+    }
+}
