--- a/SIS_UMS/SIS_UMS/Views/ApplicationForm/UpdateApplicationForm.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/ApplicationForm/UpdateApplicationForm.cshtml
@@ -10,7 +10,8 @@
 }
 
 
-<section class="content">
+
+<section class="content media-screen">
     <div class="d-flex justify-content-center align-items-center" style="min-height: 90vh;">
         <div class="col-md-12">
             <div class="card card-primary">
@@ -23,24 +24,19 @@
                         <div class="form-group">
                             <label asp-for="OfficeName" for="inputName">Office Name</label>
                             <input asp-for="OfficeName" type="text" id="inputName" class="form-control">
-                            <span asp-validation-for="OfficeName" class="text-danger"></span>
 
                         </div>
                         <!-- Student ID Input -->
                         <div class="form-group">
                             <label asp-for="StudentId" for="inputDescription">Student ID</label>
                             <input asp-for="StudentId" id="inputDescription" class="form-control" rows="4" />
-                            <span asp-validation-for="StudentId" class="text-danger"></span>
 
                         </div>
                         <!-- Application Type Select -->
                         <div class="form-group">
-                            <label asp-for="ApplicationType" for="inputStatus">Application Type</label>
-                            <select asp-for="ApplicationType" class="form-control custom-select">
-                                <option value="" selected disabled>Select one</option>
-                                <option value="Financial Statement">Financial Statement</option>
-                                <option value="Financial Agreement">Financial Agreement</option>
-                            </select>
+                            <label asp-for="ApplicationType" for="inputDescription">Application Type</label>
+                            <input asp-for="ApplicationType" id="inputDescription" class="form-control" rows="4" />
+
                         </div>
 
                         <!-- Status Select -->
@@ -54,7 +50,6 @@
                         </div>
 
 
-                        <!-- Additional Info Textarea -->
                         <!-- Additional Info Textarea -->
                         <div class="form-group">
                             <label asp-for="AdditionalApplicationDetails" for="inputProjectLeader">Additional Info</label>
@@ -73,3 +68,4 @@
         </div>
     </div>
 </section>
+
