--- a/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
@@ -3,52 +3,36 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/SIS_UMS.styles.css" asp-append-version="true" />
-    <title>@ViewBag.Title</title>
-    <link rel="icon" href="~/img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="~/img/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="~/css/site.css" />
+    <!-- Base Styles -->
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/SIS_UMS.styles.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/css/site.css">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&amp;display=fallback">
-
-    <!-- External CSS Stylesheets -->
+    <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- DataTables -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/css/all.min.css">
     <link rel="stylesheet" href="~/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="~/css/buttons.bootstrap4.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.10/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css">
+
+    <!-- jQuery (required for DataTables) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
 
-    <!-- External JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.10/js/jquery.dataTables.min.js"></script>
-
-
+    <!-- AdminLTE -->
     <link rel="stylesheet" href="~/css/adminlte.min.css">
 
-    <!-- Include DataTables CSS -->
-    <link rel="stylesheet" href="~/lib/datatables/datatables.min.css">
-
-    <!-- Include jQuery (required for DataTables) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- Include DataTables JavaScript -->
-    <script src="~/lib/datatables/jquery.dataTables.min.js"></script>
-
-    <!-- Include Bootstrap CSS (if using Bootstrap) -->
-    <link rel="stylesheet" href="~/lib/datatables/dataTables.bootstrap4.min.css">
-
+    <!-- Tempus Dominus -->
     <link rel="stylesheet" href="~/css/tempusdominus-bootstrap-4.min.css">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-
-
 </head>
 <body>
 
@@ -182,7 +166,6 @@
     <!-- Page specific script -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.10/js/jquery.dataTables.min.js"></script>
 
 
 
