Finishing the Implementation of the Application Form

--- a/SIS_UMS/SIS_UMS/Views/ApplicationForm/GetAllApplicationForm.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/ApplicationForm/GetAllApplicationForm.cshtml
@@ -40,7 +40,7 @@
                             <!-- DataTables Buttons -->
                             <div class="col-sm-12 col-md-6">
                                 <div class="dt-buttons btn-group flex-wrap">
-                                    <!-- Buttons for copying, exporting data, etc. -->
+                                    <!-- Buttons for copying, exporting data, edit -->
                                     <button class="btn btn-secondary buttons-copy buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>Copy</span></button>
                                     <button class="btn btn-secondary buttons-csv buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>CSV</span></button>
                                     <button class="btn btn-secondary buttons-excel buttons-html5" tabindex="0" aria-controls="example1" type="button"><span>Excel</span></button>
