--- a/SIS_UMS/SIS_UMS/Views/ApplicationForm/GetApplicationFormById.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/ApplicationForm/GetApplicationFormById.cshtml
@@ -20,7 +20,7 @@
                 <!-- DataTables Buttons -->
                 <div class="col-sm-12 col-md-6 mt-2">
                     <div class="dt-buttons btn-group flex-wrap">
-                        <!-- Buttons for copying, exporting data, etc. -->
+                        <!-- Buttons for copying, exporting data, edit -->
                         <button class="btn btn-secondary buttons-pdf buttons-html5" id="generatePdfButton" tabindex="0" aria-controls="example1" type="button"><span><i class="fas fa-download"></i> PDF</span></button>
                         <button class="btn btn-secondary buttons-print" tabindex="0" aria-controls="example1" type="button"><span><i class="fas fa-print"></i> Print</span></button>
                         <a class="btn btn-secondary buttons-print" href="/application-form/update-application-form/@Model.FormId" aria-controls="example1">
