--- a/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewBag.Title</title>
     <link rel="icon" href="~/img/favicon.ico" type="image/x-icon">
 
     <!-- Base Styles -->
@@ -114,14 +115,14 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a asp-controller="FinancialAgreement" asp-action="GetAllFinancialAgreement" class="nav-link">
                <i class="nav-icon fas fa-file-contract"></i>
               <p>
                 Financial Agreement
               </p>
             </a>
           </li>
-          <li class="nav-item menu-open">
+          <li class="nav-item">
             <a asp-controller="ApplicationForm" asp-action="GetAllApplicationForm" class="nav-link active">
               <i class="nav-icon fas fa-file-alt"></i>
               <p>
