--- a/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Shared/_Layout.cshtml
@@ -114,7 +114,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a asp-controller="FinancialAgreement" asp-action="GetAllApplicationForm" class="nav-link">
                <i class="nav-icon fas fa-file-contract"></i>
               <p>
                 Financial Agreement
